--- a/Final/final.css
+++ b/Final/final.css
@@ -103,6 +103,14 @@
     left: 288px;
 }
 
+.xbox .dpad {
+    position: absolute;
+    width: 110px;
+    height: 111px;
+    top: 345px;
+    left: 223px;
+}
+
 .xbox .face {
     background: url(xbox-assets/dpad.svgz);
     position: absolute;
