--- a/Finalrev/Finalrev.css
+++ b/Finalrev/Finalrev.css
@@ -36,6 +36,16 @@
     transform: rotateY(180deg);
 }
 
+.xbox .quadrant {
+    position: unset;
+    background: url(xbox-assets/quadrant.svgz);
+    height: 45px;
+    width: 45px;
+    top: 258px;
+    left: 354px;
+    z-index: 0;
+}
+
 .xbox .button {
     position: absolute;
     background: url(abxymod.png);
@@ -102,54 +112,3 @@
     top: 113px;
     left: 288px;
 }
-
-.xbox .face {
-    background: url(xbox-assets/dpad.svgz);
-    position: absolute;
-    opacity: 0;
-}
-
-.xbox .face.pressed {
-    opacity: 1;
-}
-
-.xbox .face.up {
-    background-position: 34px 0;
-    left: 38px;
-    top: 0px;
-    width: 34px;
-    height: 56px;
-}
-
-.xbox .face.down {
-    left: 38px;
-    bottom: 0;
-    width: 34px;
-    height: 56px;
-}
-
-.xbox .face.left {
-    background-position: 0 -93px;
-    width: 55px;
-    height: 35px;
-    top: 38px;
-    left: 0;
-}
-
-.xbox .face.right {
-    background-position: 0 -57px;
-    width: 55px;
-    height: 35px;
-    top: 38px;
-    right: 0;
-}
-
-.xbox.half {
-    margin-top: -315px;
-}
-
-.xbox {
-    background: no-repeat center;
-}
-
-/*END Xbox One Controller Styling*/
