--- a/Finalfunks/Finalfunks.css
+++ b/Finalfunks/Finalfunks.css
@@ -1,6 +1,6 @@
 /*BEGIN Xbox One Controller Styling*/
 .controller.xbox {
-    background: url(basemodfunks.png);
+    background: url(basemodfunk.png);
     height: 630px;
     width: 750px;
     /*    margin-left: -375px;
