--- a/Finalspoods/Final.css
+++ b/Finalspoods/Final.css
@@ -136,7 +136,7 @@
     position: absolute;
     width: 55px;
     height: 55px;
-    background: url(ps4-assets/face.svgz);
+    background: url(abxymod.png);
 }
 
 .ds4 .button.pressed {
