--- a/Finalspoods/Final.css
+++ b/Finalspoods/Final.css
@@ -164,7 +164,7 @@
 
 .ds4 .stick {
     position: absolute;
-    background: url(stickmod.png);
+    background: url(sticskmod.png);
     height: 94px;
     width: 94px;
 z-index: 1000;
