--- a/Finalspoods/Final.css
+++ b/Finalspoods/Final.css
@@ -30,6 +30,36 @@
     background-position-x: 99px;
 }
 
+.ds4 .bumper {
+    width: 99px;
+    height: 23px;
+    background: url(bumper.png) no-repeat;
+    opacity: 0;
+}
+
+.ds4 .bumpers {
+    position: absolute;
+    width: 588px;
+    height: 23px;
+    left: 109px;
+    top: 94px;
+}
+
+.ds4 .bumper.pressed {
+    opacity: 1;
+}
+
+.ds4 .bumper.left {
+    /* -webkit-transform: rotateY(180deg); */
+    /* transform: rotateY(180deg); */
+    float: left;
+}
+
+.ds4 .bumper.right {
+    float: right;
+    transform: rotateY(180deg);
+}
+
 .ds4 .touchpad {
     width: 262px;
     height: 151px;
