--- a/Finalspoods/Final.css
+++ b/Finalspoods/Final.css
@@ -33,7 +33,7 @@
 .ds4 .bumper {
     width: 99px;
     height: 23px;
-    background: url(bumper.png) no-repeat;
+    background: url(bumpermod.png) no-repeat;
     opacity: 0;
 }
 
