--- a/Finalspoods/Final.css
+++ b/Finalspoods/Final.css
@@ -61,7 +61,7 @@
 }
 
 .ds4 .touchpad {
-background: url(touchpadmod.jpg) no-repeat center;
+background: url(touchpadmod.gif) no-repeat center;
     width: 262px;
     height: 151px;
     position: absolute;
@@ -70,7 +70,7 @@ background: url(touchpadmod.jpg) no-repeat center;
 }
 
 .ds4 .touchpad.pressed {
-    background: url(touchpadmod.jpg) no-repeat center;
+    background: url(touchpadmod.gif) no-repeat center;
 }
 
 .ds4 .arrows {
