--- a/Finalfunks2/Final.css
+++ b/Finalfunks2/Final.css
@@ -56,6 +56,20 @@
     left: 144px;
 }
 
+.xbox .stick.left {
+background: url(LSmod.png); 
+background-position: -85px;
+height: 83px;
+width: 83px;
+}
+
+.xbox .stick.right {
+background: url(RSmod.png); 
+background-position: 0;
+height: 83px;
+width: 83px;
+}
+
 .xbox .stick.pressed {
     background-position: 0 0;
 }
