--- a/finalvaporwave/final.css
+++ b/finalvaporwave/final.css
@@ -32,3 +32,11 @@
     left: 354px;
     z-index: 0;
 }
+
+.xbox .stick {
+    position: absolute;
+    background: url(stickmod.png);
+    background-position: -85px 0;
+    height: 83px;
+    width: 83px;
+}
