--- a/finalvaporwave/final.css
+++ b/finalvaporwave/final.css
@@ -33,6 +33,11 @@
     z-index: 0;
 }
 
+.xbox .button.pressed {
+    background-position-y: -48px;
+    margin-top: 0;
+    opacity: 1;
+}
 .xbox .stick {
     position: absolute;
     background: url(stickmod.png);
