--- a/finalvaporwave/final.css
+++ b/finalvaporwave/final.css
@@ -23,6 +23,13 @@
     transform: rotateY(180deg);
 }
 
+.xbox .bumper {
+    width: 170px;
+    height: 61px;
+    background: url(bumpermod.png);
+    opacity: 0;
+}
+
 .xbox .quadrant {
     position: unset;
     background: url(xbox-assets/quadrant.svgz);
