--- a/Finalredtiger/final.css
+++ b/Finalredtiger/final.css
@@ -1,5 +1,5 @@
 .controller.xbox {
-    background: url(baseredtigermod.png);
+    background: url(basetigermod.png);
     height: 630px;
     width: 750px;
     /*    margin-left: -375px;
