--- a/Finalredtiger/final.css
+++ b/Finalredtiger/final.css
@@ -16,10 +16,26 @@
     z-index: 0;
 }
 
+.xbox .abxy {
+    position: absolute;
+    width: 153px;
+    height: 156px;
+    top: 198px;
+    left: 488px;
+}
+
 .xbox .button.pressed {
     background-position-y: -48px;
     margin-top: 0;
     opacity: 1;
+}
+
+.xbox .dpad {
+    position: absolute;
+    width: 110px;
+    height: 111px;
+    top: 345px;
+    left: 223px;
 }
 
 .xbox .face {
