--- a/FinalTimes/Final.css
+++ b/FinalTimes/Final.css
@@ -37,6 +37,12 @@
     height: 48px;
 }
 
+.xbox .button.pressed {
+    background-position-y: -48px;
+    margin-top: 0;
+    opacity: 1;
+}
+
 .xbox .stick {
     position: absolute;
     background: url(stickmod.png);
