--- a/Finalprod/Final.css
+++ b/Finalprod/Final.css
@@ -22,6 +22,13 @@
     left: 488px;
 }
 
+.xbox .button {
+    position: absolute;
+    background: url(abxymod.png);
+    width: 48px;
+    height: 48px;
+}
+
 .xbox .button.pressed {
     background-position-y: -48px;
     margin-top: 0;
