--- a/Finalprod/Final.css
+++ b/Finalprod/Final.css
@@ -67,6 +67,14 @@
     left: 223px;
 }
 
+.xbox .stick {
+    position: absolute;
+    background: url(stickmod.png);
+    background-position: -85px 0;
+    height: 83px;
+    width: 83px;
+}
+
 .xbox .face {
     background: url(dpadmod.png);
     position: absolute;
