--- a/Finalprod/Final.css
+++ b/Finalprod/Final.css
@@ -11,6 +11,13 @@
     opacity: 0;
 }
 
+.xbox .bumper {
+    width: 170px;
+    height: 61px;
+    background: url(bumpermod.png);
+    opacity: 0;
+}
+
 .xbox .quadrant {
     position: unset;
     background: url(xbox-assets/quadrant.svgz);
