--- a/Finalprod/Final.css
+++ b/Finalprod/Final.css
@@ -35,6 +35,19 @@
     opacity: 0;
 }
 
+.xbox .back.pressed, .xbox .start.pressed {
+    opacity: 1;
+}
+
+.xbox .back {
+    float: left;
+}
+
+.xbox .start {
+    background-position: 33px 0px;
+    float: right;
+}
+
 .xbox .abxy {
     position: absolute;
     width: 153px;
