--- a/Finalpokemon/Final.css
+++ b/Finalpokemon/Final.css
@@ -29,6 +29,30 @@
     opacity: 1;
 }
 
+.xbox .a {
+    background-position: 0 0;
+    top: 108px;
+    left: 55px;
+}
+
+.xbox .b {
+    background-position: -49px 0;
+    top: 58px;
+    right: 0px;
+}
+
+.xbox .x {
+    background-position: -98px 0;
+    top: 58px;
+    left: 4px;
+}
+
+.xbox .y {
+    background-position: 48px 0;
+    left: 55px;
+    top: 7px;
+}
+
 .xbox .dpad {
     position: absolute;
     width: 110px;
