--- a/Final7deadlysins/Final.css
+++ b/Final7deadlysins/Final.css
@@ -1,5 +1,5 @@
 .controller.xbox {
-    background: url(basemod.png);
+    background: url(basemod7deadlysins.png);
     height: 630px;
     width: 750px;
     /*    margin-left: -375px;
