--- a/Final7deadlysins/Final.css
+++ b/Final7deadlysins/Final.css
@@ -8,7 +8,7 @@
 
 .xbox .quadrant {
     position: unset;
-    background: url(xbox-assets/quadrant.svgz);
+    background: url(Final7deadlysins/quadrant.svgz);
     height: 45px;
     width: 45px;
     top: 258px;
