--- a/FinalDefiance/Final.css
+++ b/FinalDefiance/Final.css
@@ -14,6 +14,20 @@
     z-index: 0;
 }
 
+.xbox .abxy {
+    position: absolute;
+    width: 153px;
+    height: 156px;
+    top: 198px;
+    left: 488px;
+}
+
+.xbox .button.pressed {
+    background-position-y: -48px;
+    margin-top: 0;
+    opacity: 1;
+}
+
 .xbox .back, .xbox .start {
     background: url(start-selectmod.png);
     width: 33px;
