--- a/FinalPS5/Final.css
+++ b/FinalPS5/Final.css
@@ -4,7 +4,7 @@ body {
     margin: 0 auto; 
     overflow: hidden; 
 } .controller.xbox{
-    background: url(https://imgur.com/a/kQJaRFZ.png);
+    background: url(bodymod.png);
     width: 807px;
     height: 651px;
     margin-left: 0;
