--- a/FinalPS5/Final.css
+++ b/FinalPS5/Final.css
@@ -4,7 +4,7 @@ body {
     margin: 0 auto; 
     overflow: hidden; 
 } .controller.xbox{
-    background: url(bodymod1.png);
+    background: url(bodymod.png);
     width: 807px;
     height: 651px;
     margin-left: 0;
@@ -59,7 +59,7 @@ body {
 } .xbox .quadrant { 
     display: none; 
 } .xbox .back, .xbox .start {
-    background: url(https://i.imgur.com/YJRVQxC.png);
+    background: url(start-selectmod.png);
     width: 27px;
     height: 57px;
     opacity: 0;
@@ -113,7 +113,7 @@ body {
     height: 108px;
     left: 94px;
 } .xbox .trigger {
-    background: url(https://i.imgur.com/LsxmGBD.png);
+    background: url(triggersmod.png);
     width: 111px;
     height: 108px;
     opacity: 0;
