--- a/Finalnewcontroller/final.css
+++ b/Finalnewcontroller/final.css
@@ -16,5 +16,5 @@ background: url(touchpadmod.png) no-repeat center;
 }
 
 .ds4 .touchpad.pressed {
-    background: url(touchpadmod.png) no-repeat center;
+    background: url(touchpadmodpressed.png) no-repeat center;
 }
